<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Conectadot</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_porte_pequeno">Porte: Pequeno</string>
<string name="lbl_cachorro"> Cachorro</string>
<string name="msg_junte_se_plat">Junte-se à plataforma</string>
<string name="lbl_porte_m_dio">Porte: Médio</string>
<string name="lbl_nome_do_abrigo">Nome do abrigo</string>
<string name="msg_status_castra2">Status castração:</string>
<string name="msg_possui_vacinas"> Possui vacinas pendentes</string>
<string name="msg_outro_abrigo_de">Outro Abrigo de Animais</string>
<string name="lbl_email_address">Email address</string>
<string name="lbl_esp_cie">Espécie:</string>
<string name="lbl_cadastre_se">Cadastre-se</string>
<string name="msg_status_vacina">Status vacinação: Possui vacinas pendentes</string>
<string name="lbl_estado">Estado</string>
<string name="lbl_m_dio"> Médio</string>
<string name="lbl_nome_morgana">Nome: Morgana</string>
<string name="lbl_cadastrar">Cadastrar</string>
<string name="lbl_abrigo">Abrigo: </string>
<string name="lbl_porte">Porte:</string>
<string name="lbl_kyuubi2"> Kyuubi</string>
<string name="lbl_nome_kyuubi">Nome: Kyuubi </string>
<string name="lbl_5_0_km">5.0 km</string>
<string name="lbl_idade">Idade:</string>
<string name="msg_milhares_de_pet">Milhares de pets a procura de um novo lar</string>
<string name="msg_cadastrar_abrig">Cadastrar abrigo</string>
<string name="lbl_meus_chats">Meus chats</string>
<string name="msg_abrigo_de_anima2">Abrigo de animais?</string>
<string name="lbl_m_dio2">Médio</string>
<string name="msg_n_o_possui_cont">Não possui conta? Cadastre-se</string>
<string name="lbl_srd"> SRD</string>
<string name="lbl_castrado"> Castrado</string>
<string name="lbl_nome_kyuubi2">Nome: Kyuubi</string>
<string name="msg_informa_es_adi">Informações adicionais: Sem informações adicionais</string>
<string name="lbl_idade_10_meses">Idade: 10 meses</string>
<string name="lbl_come_e_agora">Começe agora</string>
<string name="lbl_obrigada">Obrigada! &#128075;</string>
<string name="msg_sem_informa_es"> Sem informações adicionais</string>
<string name="lbl_novo_animal">Novo animal</string>
<string name="msg_bem_vindo_ao_co">Bem-vindo ao Conectadot</string>
<string name="lbl_esse_o_dog">Esse é o dog</string>
<string name="msg_la_ador_abrigo2">Laçador Abrigo de Animiais</string>
<string name="lbl_entrar">Entrar</string>
<string name="lbl_endere_o">Endereço</string>
<string name="lbl_11_31_am">11:31 AM</string>
<string name="lbl_oii">Oii</string>
<string name="lbl_f_mea"> Fêmea</string>
<string name="msg_status_vacina2">Status vacinação:</string>
<string name="lbl_email">Email</string>
<string name="lbl_confirmar_senha">Confirmar senha</string>
<string name="msg_status_castra">Status castração: Castrado</string>
<string name="lbl_2">2</string>
<string name="msg_ra_a_lulu_da_p">Raça: Lulu da Pomerânia</string>
<string name="msg_la_ador_abrigo">Laçador Abrigo de Animais</string>
<string name="lbl_criar_conta">Criar conta</string>
<string name="lbl_cidade">Cidade</string>
<string name="msg_lulu_da_pomer_n2">Lulu da Pomerânia</string>
<string name="msg_abrigo_de_anima">Abrigo de animais? Junte-se à plataforma</string>
<string name="lbl_11_30_am">11:30 AM</string>
<string name="lbl_dist_ncia">Distância: </string>
<string name="lbl_grande">Grande</string>
<string name="lbl_nome">Nome: </string>
<string name="lbl_porte2">Porte</string>
<string name="msg_esqueceu_a_senh">Esqueceu a senha?</string>
<string name="lbl_senha">Senha</string>
<string name="lbl_mensagem">Mensagem</string>
<string name="lbl_nome3">Nome</string>
<string name="msg_detalhes_castra">Detalhes castração</string>
<string name="lbl_ra_a_srd">Raça: SRD</string>
<string name="lbl_nome2">Nome:</string>
<string name="lbl_pequeno2">Pequeno</string>
<string name="msg_lulu_da_pomer_n"> Lulu da Pomerânia</string>
<string name="lbl_ra_a">Raça:</string>
<string name="lbl_billy">Billy</string>
<string name="lbl_idade2">Idade</string>
<string name="lbl_kyuubi">Kyuubi</string>
<string name="lbl_pequeno"> Pequeno</string>
<string name="lbl_sexo_f_mea">Sexo: Fêmea</string>
<string name="lbl_sexo">Sexo:</string>
<string name="msg_segue_uma_image">Segue uma imagem do animalzinho</string>
<string name="msg_por_favor_entre">Por favor entre para continuar</string>
<string name="msg_esp_cie_cachor">Espécie: Cachorro</string>
<string name="msg_informa_es_adi2">Informações adicionais:</string>
<string name="msg_detalhes_vacina">Detalhes vacinação</string>
<string name="msg_dist_ncia_5_0">Distância: 5.0 km</string>
<string name="lbl_esp_cie2">Espécie</string>
<string name="msg_abrigo_la_ador">Abrigo: Laçador Abrigo de Animais</string>
<string name="msg_n_o_possui_cont2">Não possui conta?</string>
<string name="lbl_nome_billy">Nome: Billy</string>
<string name="lbl_ra_a3">Raça</string>
<string name="lbl_morgana">Morgana</string>
<string name="lbl_ra_a2">Raça: </string>
<string name="lbl_10_meses"> 10 meses</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
</resources>
