<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="maisDetalhesAbrigoVM" type="com.conectadot.app.modules.maisdetalhesabrigo.data.viewmodel.MaisDetalhesAbrigoVM"/>
    </data>
    <FrameLayout android:id="@+id/frameStackellipsetwo"
        android:layout_height="match_parent" android:layout_width="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:backgroundTint="@color/amber_200"
            android:id="@+id/floatingBtnFloatingactionbutton"
            android:layout_gravity="bottom|end"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            app:fabCustomSize="@dimen/_64pxh"
            app:srcCompat="@drawable/img_edit" app:tint="@color/black_900"/>
        <LinearLayout android:id="@+id/linearColumn"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearColumnellipsetwo"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                <ImageView android:id="@+id/imageEllipseTwo"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_130pxh"
                    android:layout_marginEnd="@dimen/_105pxh"
                    android:layout_marginStart="@dimen/_105pxh"
                    android:layout_marginTop="@dimen/_48pxv"
                    android:layout_width="@dimen/_130pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_ellipse2}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNomeKyuubi"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtNomeKyuubi}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/lbl_nome_kyuubi2"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtEspcieCachor"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtEspcieCachor}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/msg_esp_cie_cachor"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtRaaLuludaP"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtRaaLuludaP}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/msg_ra_a_lulu_da_p"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSexoFmea"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtSexoFmea}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/lbl_sexo_f_mea"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtIdade10meses"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtIdade10meses}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/lbl_idade_10_meses"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPortePequeno"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtPortePequeno}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/lbl_porte_pequeno"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtStatuscastra"
                    android:layout_gravity="start"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtStatuscastra}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/msg_status_castra"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtStatusvacina"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtStatusvacina}"
                    style="@style/txtIntersemibold13_1" tools:text="@string/msg_status_vacina"/>
                <TextView android:gravity="start"
                    android:id="@+id/txtInformaesadi"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_161pxv"
                    android:layout_marginEnd="@dimen/_32pxh"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="match_parent"
                    android:text="@{maisDetalhesAbrigoVM.maisDetalhesAbrigoModel.txtInformaesadi}"
                    style="@style/txtInterbold13" tools:text="@string/msg_informa_es_adi"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
