<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="maisDetalhesUsuRioVM" type="com.conectadot.app.modules.maisdetalhesusurio.data.viewmodel.MaisDetalhesUsuRioVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearMaisdetalhes"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearColumnarrowdown"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_3">
            <ImageView android:id="@+id/imageArrowdown"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_28pxh"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowdown"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowdown"/>
            <ImageView android:id="@+id/imageEllipseTwo"
                android:layout_gravity="start"
                android:layout_height="@dimen/_130pxh"
                android:layout_marginEnd="@dimen/_105pxh"
                android:layout_marginStart="@dimen/_105pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="@dimen/_130pxh"
                android:scaleType="centerCrop" circular="@{true}"
                imageRes="@{@drawable/img_ellipse2}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNomeKyuubi"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtNomeKyuubi}"
                style="@style/txtIntersemibold13_1" tools:text="@string/lbl_nome_kyuubi2"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtEspcieCachor"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtEspcieCachor}"
                style="@style/txtIntersemibold13_1" tools:text="@string/msg_esp_cie_cachor"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtRaaLuludaP"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtRaaLuludaP}"
                style="@style/txtIntersemibold13_1" tools:text="@string/msg_ra_a_lulu_da_p"/>

            <TextView android:ellipsize="end"
                android:id="@+id/txtIdade10meses"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtIdade10meses}"
                style="@style/txtIntersemibold13_1" tools:text="@string/lbl_idade_10_meses"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPortePequeno"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtPortePequeno}"
                style="@style/txtIntersemibold13_1" tools:text="@string/lbl_porte_pequeno"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtStatuscastra"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtStatuscastra}"
                style="@style/txtIntersemibold13_1" tools:text="@string/msg_status_castra"/>
            <TextView android:ellipsize="end" android:gravity="start"
                android:id="@+id/txtStatusvacina"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{maisDetalhesUsuRioVM.maisDetalhesUsuRioModel.txtStatusvacina}"
                style="@style/txtIntersemibold13_1" tools:text="@string/msg_status_vacina"/>
        </LinearLayout>
    </LinearLayout>
</layout>
