<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="criarContaAbrigoVM" type="com.conectadot.app.modules.criarcontaabrigo.data.viewmodel.CriarContaAbrigoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearCriarcontaA"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyledeep_purple_A100">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="@dimen/_28pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowup"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowup"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCadastrarabrig"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20pxv"
                    android:layout_marginEnd="@dimen/_110pxh"
                    android:layout_marginStart="@dimen/_62pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_weight="0.83"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{criarContaAbrigoVM.criarContaAbrigoModel.txtCadastrarabrig}"
                    style="@style/txtInterbold17" tools:text="@string/msg_cadastrar_abrig"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etGroupSeventeen"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupSeventeenValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end" android:hint="@string/lbl_senha"
            android:id="@+id/etGroupSixteen" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupSixteenValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end"
            android:hint="@string/lbl_confirmar_senha"
            android:id="@+id/etGroupTwelve" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupTwelveValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end"
            android:hint="@string/lbl_nome_do_abrigo"
            android:id="@+id/etGroupFifteen" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupFifteenValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end" android:hint="@string/lbl_endere_o"
            android:id="@+id/etGroupFourteen" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupFourteenValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end" android:hint="@string/lbl_estado"
            android:id="@+id/etGroupThirteen" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupThirteenValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_black_900_radius_5"
            android:ellipsize="end" android:hint="@string/lbl_cidade"
            android:id="@+id/etGroupEleven" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@={criarContaAbrigoVM.criarContaAbrigoModel.etGroupElevenValue}"
            android:textColorHint="@color/black_900"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnCadastrar"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_18pxv"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl_cadastrar"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_cadastrar"/>
    </LinearLayout>
</layout>
